<resources>

    <string name="app_name">DexplugLoader</string>

    <string name="bt1Name">更多游戏</string>
    <string name="bt2Name">强制更新任务</string>
    <string name="itemName">刀塔传奇</string>
	<string name="itemIcon">itemIcon</string>
	<string name="itemInfo">新神曲是波澜壮阔的神话史诗在移动平台上全新演绎，新神曲经典刺激的战斗方式让您轻松上</string>
    <string name="itemDown">下载</string>
    <string name="itemSub">88.22MB</string>
    <string name="todo">TODO</string>
</resources>
